lab/openshift/apps/billing-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: guidewire-apps
  labels:
    app: billing-service
    app.kubernetes.io/part-of: guidewire-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
        app.kubernetes.io/part-of: guidewire-poc
    spec:
      containers:
        - name: billing-service
          image: image-registry.openshift-image-registry.svc:5000/guidewire-apps/billing-service:latest
          ports:
            - containerPort: 8082
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
