lab/openshift/apps/billing-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: guidewire-apps
  labels:
    app: billing-service
    app.kubernetes.io/part-of: guidewire-poc
spec:
  selector:
    app: billing-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
  type: ClusterIP
